tests/pass/generic.us


struct List<T> {
    head:T,
    tail:List<T>
}

fn main() {
    let shopping = List {
        head:"apple",
        tail:List {
            head:"banana",
            tail:nil
        }
    };

    print(shopping.head); // Expect:"apple"
}

