tests/fail/few_fields.us

struct List {
    head:i32,
    body:nil
}

fn main() -> List {
    let list = List {
        head:10
    };

    list; // Expect : struct `List` is missing fields
}